syntax = "proto3";

package event;

service EventAction {
  rpc AppendToStream(AppendToStreamRequest) returns (AppendToStreamResponse) {}
  rpc ReadStream(stream ReadStreamRequest) returns (stream ReadStreamResponse) {}
}

message Event {
    optional string id = 1;
    string payload = 2;
    repeated string tags = 3;
}

message AppendToStreamRequest {
  string stream_name = 1;
  repeated Event events = 2;
}

message AppendToStreamResponse {
  string response = 1;
}

message ReadStreamRequest {
  string stream_name = 1;
  uint64 stream_position = 2;
}

message ReadStreamResponse {
  Event event = 1;
  uint64 stream_position = 2;
}

